v0.10.0 (WIP):

    BREAKING: Editor: Ensure CreateItemAction is not activated fom invalid state, thanks @pthom
        From this point ed::EndCreate() and ed::EndDelete() can only be called when
        ed::BeginCreate() and ed::BeginDelete() calls were successful.

    BUGFIX: Examples: Call ed::EndCreate() and ed::EndDelete() only when ed::BeginCreate() and ed::BeginDelete() returned true


v0.9.2 (2023-09-01):

    NEW: Editor: Add offset of hover/select to style (thanks @MultiPain)

    NEW: Editor: Add IMGUI_NODE_EDITOR_API to support building editor as a shared library (#189)

    NEW: Canvas: Add IMGUIEX_CANVAS_API to support building canvas as a shared library (#189)

    CHANGE: Editor: Support ImGui r18836 after SetItemUsingMouseWheel removal (#218), thanks @ocornut

    CHANGE: Editor: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut

    CHANGE: Examples: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut

    CHANGE: Canvas: Don't use deprecated SetItemAllowOverlap (#250)

    CHANGE: Examples: Don't use deprecated SetItemAllowOverlap (#250)

    CHANGE: Editor: Define IMGUI_DEFINE_MATH_OPERATORS before <imgui.h> (#209), thanks @ocornut

    CHANGE: Editor: Unary operator- for ImVec2 is defined by ImGui since r18955 (#248)

    BUGFIX: Editor: Correctly initialize 'width' for view resize code (thx @gnif)

    BUGFIX: Examples: Handle node deletion before links (#182)
        Deleting node queue connected links for deletion.

    BUGFIX: Examples: Simplify and fix drawing of node header line (#180)

    BUGFIX: Editor: Cleanup tabs.

    BUGFIX: Editor: Use ImGuiKey directly with ImGui r18822 (#183)

    BUGFIX: Examples: Use ImGuiKey directly with ImGui r18822 (#183)

    BUGFIX: Examples: Use ImGuiKey_KeypadEnter with ImGui r18604 (#183)

    BUGFIX: Examples: Add missing <cstdint> include for std::intptr_t (#199)

    BUGFIX: Examples: Don't use empty string as identifier
