@@ -6,6 +6,8 @@ v0.10.0 (WIP):
 
     BUGFIX: Examples: Call ed::EndCreate() and ed::EndDelete() only when ed::BeginCreate() and ed::BeginDelete() returned true
 
+    BUGFIX: Canvas: Ensure SentinelDrawCallback cleanup (#255)
+
 
 v0.9.2 (2023-09-01):
 
